# EDJournalQT

./: .gitignore  CMakeLists.txt  README.md
cmake/: lib.cmake
src/: Event.cpp  Event.h  EventDispatch.cpp  EventDispatch.h  EventDispatchObject.cpp  EventDispatchObject.h  Events.h  JFile.cpp  JFile.h  JournalFile.cpp  JournalFile.h  JournalWatcher.cpp  JournalWatcher.h  LiveJournal.cpp  LiveJournal.h  Types.h  Watcher.cpp  Watcher.h  events.inc
src/Events/: AllEvents.cpp  Event.cpp  Event.h  EventAFMURepairs.cpp  EventAFMURepairs.cpp.h  EventAFMURepairs.h  EventApproachBody.cpp  EventApproachBody.cpp.h  EventApproachBody.h  EventApproachSettlement.cpp  EventApproachSettlement.cpp.h  EventApproachSettlement.h  EventBounty.cpp  EventBounty.cpp.h  EventBounty.h  EventBuyAmmo.cpp  EventBuyAmmo.cpp.h  EventBuyAmmo.h  EventBuyDrones.cpp  EventBuyDrones.cpp.h  EventBuyDrones.h  EventBuyExplorationData.cpp  EventBuyExplorationData.cpp.h  EventBuyExplorationData.h  EventBuyTradeData.cpp  EventBuyTradeData.cpp.h  EventBuyTradeData.h  EventCapShipBond.cpp  EventCapShipBond.cpp.h  EventCapShipBond.h  EventCargo.cpp  EventCargo.cpp.h  EventCargo.h  EventCargoDepot.cpp  EventCargoDepot.cpp.h  EventCargoDepot.h  EventChangeCrewRole.cpp  EventChangeCrewRole.cpp.h  EventChangeCrewRole.h  EventClearSavedGame.cpp  (+505 more)
src/State/: Commander.cpp  Commander.h  CommanderState.cpp  CommanderState.h
src/Types/: Enums.h  MaterialTable.h  Materials.cpp  Materials.h  Planet.cpp  Planet.h  RankProgress.cpp  RankProgress.h  Star.cpp  Star.h  StellarBodesTables.h  StellarBody.cpp  StellarBody.h
src/Utility/: BodyWorth.cpp  BodyWorth.h  HabZone.cpp  HabZone.h  HabitableZone.cpp  HabitableZone.h
test/: Handler.cpp  Handler.h  main.cpp
tools/: events.txt  processevents.sh
